--- a/README
+++ b/README
@@ -3,3 +3,8 @@ This is a fork of the general LaTeX class `faupress.cls` to be used in the
 uses some (internal) modifications of the general approach.
 
 For all questions please refer to the `documentation.pdf` of `faupress.cls` first.
+
+Die LaTex-Mustervorlage der Reihe „FAU Studien aus dem Maschinenbau“ (https://www.university-press.fau.de/verlagsprogramm/reihen/fau-maschinenbau.php)
+dient der leichteren Formatierung der dort zu erscheinenden Bände. Für alle anderen Buchreihen oder abseits von Reihen erscheinenden Bände von FAU
+University Press nutzen Sie bitte die generische Verlagsvorlage: https://github.com/UBEN-Webteam/FAU-University-Press-LaTeX-Formatvorlage.
+Bitte beachten Sie auch alle weiteren Informationen unter https://www.university-press.fau.de/publizieren/informationen-und-downloads-fuer-autoren.shtml.
