--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+# LaTex-Mustervorlage der Reihe „FAU Studien aus dem Maschinenbau“
 This is a fork of the general LaTeX class `faupress.cls` to be used in the
 `Maschinenbau` department. It is the result of a concrete PhD publication and
 uses some (internal) modifications of the general approach.
