--- a/contents/TitelseiteFAU.tex
+++ b/contents/TitelseiteFAU.tex
@@ -19,7 +19,7 @@
    Druck: xxxxxx
 }
 \oralexam{mm.dd.yy}
-\dean{Prof. Dr.-Ing. habil. Andreas Paul Fröba [Hier bitte den am Tag der Promotionsprüfung amtierenden Dekan eintragen]}
+\dean{Prof. Dr.-Ing. habil. Andreas Paul Fröba [für Arbeiten, die nach „alter“ PromO durchgeführt werden – bitte ggf. bei Promotionsbüro fragen – oder:] Prof. Dr.-Ing. Knut Graichen  [für Arbeiten, die nach „neuer“ PromO ab 12/2020 durchgeführt werden]}
 \reviewer{%
    Prof. Dr.-Ing. xxxxxx xxxxx\\
    Prof. Dr.-Ing. xxxxx xxxx}
