--- a/contents/TitelseiteFAU.tex
+++ b/contents/TitelseiteFAU.tex
@@ -1,9 +1,10 @@
 % !TeX root = Hauptdatei.tex
 \firstname{Vorname/First name}
 \lastname{Zuname/Last name}
-\degree{[bitte akad. Grad des/r Verfassers/in angeben]}
+\degree*{[bitte akad. Grad des/r Verfassers/in angeben]}
+% e.g. \degree*{M.Sc.}
 % OR for degrees to be printed in front of the name: 
-% \degree*{Dipl.-Ing.}
+% \degree{Dipl.-Ing.}
 \origin{Geburtsort/Place of birth}
 \title{Titel der Arbeit/Title of the work}
 %\subtitle{Untertitel der Arbeit/Sub title of the work}
