captions are now (re)defined using macros from KOMA-Script

--- a/contents/02-StandForschungTechnik.tex
+++ b/contents/02-StandForschungTechnik.tex
@@ -6,7 +6,7 @@
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 In Abschnitt~\ref{sec:xxxxx} xxxxx xx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxx xxxxxxxxxxxxxxxx xxxxxxxxxxxx xxx xxxxxxxxxxxxxxxx xxxxxxxxxxx xxx xxxxxxxxxxxxx xxxxxxx xxx xxx xxxxxxxxxxxxxxx xxx xxxxx xxxxxxxxxxx xxxxxxxxxxxxxxxx xxxxxxxxxxx xxx xxx xxxxxxxxxxxxxxxx xxx xx xxxxxxxxxxxxx xxxx xxx xxx xxxxx xxx xxxxxxxxx xxx xxxxxxx xxx xxxxxxxxxxxxx xx xxxxxxxxxxxxxxxxxx xxxxxxxxxxx xxxxxxxx xx xxxxxxx xxxx xxxxxx xxxxxxxx xxx xxx xxx xxxxxxxxxxxxxx xxxxxxxxxx xx xxxxxxxxxxx xx xxxxx xxx xxxxx xxx xxx xxxx xx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxx \cite{KEYH} xxxxxxxxx xxx xxxxxxxxxxxxxxxxx xxxxxxxxxx xx xxxxxx
 
-Bild~\ref{fig:xxxx} gibt einen Überblick über die Inhalte dieses Kapitels.
+Bild~\ref{fig:xxxx} (oder auch \autoref{fig:xxxx}) gibt einen Überblick über die Inhalte dieses Kapitels.
 \begin{figure}
 	\centering
 %	\includegraphics[width=1.0\textwidth]{xxxxx}
